minigu/binder/src/binder/snapshots/minigu_binder__program__tests__create_and_drop_graph_type-2.snap
---
source: minigu/binder/src/program/mod.rs
assertion_line: 286
expression: stmt
---
Ok:
  at: ~
  binding_variable_def: []
  statement:
    Catalog:
      - DropGraphType:
          path:
            schema:
              segments:
                - default
            object:
              - 1
          if_exists: false
  next_statement: []
