minigu/binder/src/binder/snapshots/minigu_binder__program__tests__create_and_drop_graph_type.snap
---
source: minigu/binder/src/program/mod.rs
assertion_line: 263
expression: stmt
---
Ok:
  at: ~
  binding_variable_def: []
  statement:
    Catalog:
      - CreateGraphType:
          path:
            schema:
              segments:
                - default
            object:
              - fraud_GT
          kind: Create
          source:
            Nested:
              - Node:
                  name: ~
                  alias:
                    - customer
                    - start: 41
                      end: 49
                  filler:
                    - key:
                        - - - Customer
                            - start: 51
                              end: 59
                        - start: 51
                          end: 59
                      label_set: ~
                      property_types:
                        - - name:
                              - id
                              - start: 64
                                end: 66
                            value_type:
                              - String:
                                  min_length: ~
                                  max_length: ~
                                  not_null: false
                              - start: 68
                                end: 74
                          - start: 64
                            end: 74
                        - - name:
                              - name
                              - start: 76
                                end: 80
                            value_type:
                              - String:
                                  min_length: ~
                                  max_length: ~
                                  not_null: false
                              - start: 82
                                end: 88
                          - start: 76
                            end: 88
                    - start: 50
                      end: 89
              - Node:
                  name: ~
                  alias:
                    - account
                    - start: 98
                      end: 105
                  filler:
                    - key:
                        - - - Account
                            - start: 107
                              end: 114
                        - start: 107
                          end: 114
                      label_set: ~
                      property_types:
                        - - name:
                              - "no"
                              - start: 119
                                end: 121
                            value_type:
                              - String:
                                  min_length: ~
                                  max_length: ~
                                  not_null: false
                              - start: 123
                                end: 129
                          - start: 119
                            end: 129
                        - - name:
                              - type
                              - start: 131
                                end: 135
                            value_type:
                              - String:
                                  min_length: ~
                                  max_length: ~
                                  not_null: false
                              - start: 137
                                end: 143
                          - start: 131
                            end: 143
                    - start: 106
                      end: 145
              - Edge:
                  Pattern:
                    name: ~
                    direction: LeftToRight
                    left:
                      - Alias: customer
                      - start: 153
                        end: 163
                    filler:
                      - key: ~
                        label_set:
                          - - - HOLDS
                              - start: 166
                                end: 171
                          - start: 166
                            end: 171
                        property_types: ~
                      - start: 163
                        end: 174
                    right:
                      - Alias: account
                      - start: 174
                        end: 183
              - Edge:
                  Pattern:
                    name: ~
                    direction: LeftToRight
                    left:
                      - Alias: account
                      - start: 190
                        end: 199
                    filler:
                      - key: ~
                        label_set:
                          - - - TRANSFER
                              - start: 202
                                end: 210
                          - start: 202
                            end: 210
                        property_types:
                          - - name:
                                - amount
                                - start: 212
                                  end: 218
                              value_type:
                                - SignedNumeric:
                                    kind:
                                      - Int: ~
                                      - start: 220
                                        end: 227
                                    not_null: false
                                - start: 220
                                  end: 227
                            - start: 212
                              end: 227
                      - start: 199
                        end: 231
                    right:
                      - Alias: account
                      - start: 231
                        end: 240
  next_statement: []
