minigu/binder/src/binder/snapshots/minigu_binder__program__tests__graph_create_and_drop-2.snap
---
source: minigu/binder/src/program/mod.rs
assertion_line: 308
expression: stmt
---
Ok:
  at: ~
  binding_variable_def: []
  statement:
    Catalog:
      - CreateGraphType:
          path:
            schema:
              segments:
                - a
            object:
              - b
          kind: Create
          source:
            Nested:
              - Node:
                  name: ~
                  alias:
                    - a
                    - start: 37
                      end: 38
                  filler:
                    - key: ~
                      label_set:
                        - - - Person
                            - start: 39
                              end: 45
                        - start: 39
                          end: 45
                      property_types:
                        - - name:
                              - id
                              - start: 47
                                end: 49
                            value_type:
                              - SignedNumeric:
                                  kind:
                                    - Int: ~
                                    - start: 50
                                      end: 53
                                  not_null: false
                              - start: 50
                                end: 53
                          - start: 47
                            end: 53
                        - - name:
                              - name
                              - start: 55
                                end: 59
                            value_type:
                              - String:
                                  min_length: ~
                                  max_length: ~
                                  not_null: false
                              - start: 60
                                end: 66
                          - start: 55
                            end: 66
                    - start: 38
                      end: 67
              - Node:
                  name: ~
                  alias:
                    - account
                    - start: 87
                      end: 94
                  filler:
                    - key:
                        - - - Account
                            - start: 96
                              end: 103
                        - start: 96
                          end: 103
                      label_set: ~
                      property_types:
                        - - name:
                              - "no"
                              - start: 108
                                end: 110
                            value_type:
                              - String:
                                  min_length: ~
                                  max_length: ~
                                  not_null: false
                              - start: 112
                                end: 118
                          - start: 108
                            end: 118
                        - - name:
                              - type
                              - start: 120
                                end: 124
                            value_type:
                              - String:
                                  min_length: ~
                                  max_length: ~
                                  not_null: false
                              - start: 126
                                end: 132
                          - start: 120
                            end: 132
                    - start: 95
                      end: 134
              - Edge:
                  Pattern:
                    name: ~
                    direction: Undirected
                    left:
                      - Alias: account
                      - start: 153
                        end: 162
                    filler:
                      - key: ~
                        label_set:
                          - - - knows
                              - start: 166
                                end: 171
                          - start: 166
                            end: 171
                        property_types:
                          - - name:
                                - since
                                - start: 173
                                  end: 178
                              value_type:
                                - SignedNumeric:
                                    kind:
                                      - Int: ~
                                      - start: 179
                                        end: 182
                                    not_null: false
                                - start: 179
                                  end: 182
                            - start: 173
                              end: 182
                      - start: 163
                        end: 185
                    right:
                      - Alias: a
                      - start: 186
                        end: 189
      - CreateGraph:
          path:
            schema:
              segments:
                - a
            object:
              - b
          kind: Create
          label_id: ~
          label_name: ~
          source: ~
  next_statement: []
