minigu/binder/src/binder/snapshots/minigu_binder__program__tests__graph_create_and_drop.snap
---
source: minigu/binder/src/program/mod.rs
assertion_line: 298
expression: stmt
---
Ok:
  at: ~
  binding_variable_def: []
  statement:
    Catalog:
      - CreateGraph:
          path:
            schema:
              segments:
                - default
            object:
              - myGraph
          kind: CreateIfNotExists
          label_id: 0
          label_name: ~
          source:
            Ref:
              schema:
                segments:
                  - default
              object:
                - 1
  next_statement: []
