minigu/binder/src/binder/snapshots/minigu_binder__program__tests__query.snap
---
source: minigu/binder/src/program/mod.rs
assertion_line: 327
expression: stmt
---
Ok:
  at: ~
  binding_variable_def: []
  statement:
    Query:
      Primary:
        Ambient:
          Parts:
            parts:
              - Match:
                  Simple:
                    pattern:
                      match_mode: ~
                      patterns:
                        - variable: ~
                          prefix: ~
                          expr:
                            Concat:
                              - Pattern:
                                  Node:
                                    variable: n
                                    label:
                                      Label: 1
                                    predicate:
                                      Property:
                                        - id: 1
                                          value:
                                            Value:
                                              Literal:
                                                Numeric: 12
                      keep: ~
                      where_clause: ~
                    yield_item: []
            result:
              Return:
                statement:
                  quantifier: ~
                  items:
                    Items:
                      - value:
                          Variable: n
                        alias: ~
                  group_by: ~
  next_statement: []
