minigu/binder/src/binder/snapshots/minigu_binder__program__tests__schema_create_and_drop-2.snap
---
source: minigu/binder/src/program/mod.rs
assertion_line: 227
expression: bound_create_schema2
---
Ok:
  at: ~
  binding_variable_def: []
  statement:
    Catalog:
      - CreateSchema:
          path:
            segments:
              - a
          if_not_exists: false
  next_statement: []
