minigu/binder/src/binder/snapshots/minigu_binder__program__tests__schema_create_and_drop-3.snap
---
source: minigu/binder/src/program/mod.rs
assertion_line: 229
expression: bound_drop_schema
---
Ok:
  at: ~
  binding_variable_def: []
  statement:
    Catalog:
      - DropSchema:
          path:
            segments:
              - a
              - b
              - c
          if_exists: true
  next_statement: []
